Fix delayed OpenID provider activation
Signed-off-by: Charles Graham, SWT <charles.r.graham@usace.army.mil>